--- a/Hard/readme.me
+++ b/Hard/readme.me
@@ -2,6 +2,16 @@ Hard的问题库以及答案    如果可以的话 comment一下你的逻辑 那
 
 请把所有的答案放进一个file里面 例如 我的1.cpp里面是 leetcode第一题的答案，等到你们做了之后 可以把我的给comment掉 然后放你们的答案。 最好是表明使用的语言 以下是 Sample
 
-/* <- 把旧的答案comment掉 // Solution in C++ Class Solution{ public: some code is being typed... } */
+/* <- 把旧的答案comment掉 // Solution in C++ 
+Class Solution
+{ 
+  public: some code is being typed... 
+} 
+*/
 
-// <- 新的solution //Solution in Java class Solution{ public int ... return... }
+// <- 新的solution 
+//Solution in Java 
+class Solution
+{ 
+  public int ... return... 
+}
