--- a/Medium/readme.me
+++ b/Medium/readme.me
@@ -4,7 +4,8 @@ Medium 的问题库以及答案    如果可以的话 comment一下你的逻辑 
 例如 我的1.cpp里面是 leetcode第一题的答案，等到你们做了之后 可以把我的给comment掉 然后放你们的答案。 
 最好是表明使用的语言 以下是 Sample
 
-/* <- 把旧的答案comment掉 // Solution in C++ 
+/* <- 把旧的答案comment掉 
+// Solution in C++ 
 Class Solution
 { 
   public: some code is being typed... 
